# InSilicoCancerCell

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  astro.config.mjs  main.py  package.json  pyproject.toml  rust-toolchain.toml  tasks.py
.github/workflows/: CI.yml  main.yml  maturin.yml
data/experimental/: mG0_1.mat  mG0_10.mat  mG0_11.mat  mG0_2.mat  mG0_3.mat  mG0_4.mat  mG0_5.mat  mG0_6.mat  mG0_7.mat  mG0_8.mat  mG0_9.mat  mG1_1.mat  mG1_2.mat  mG1_3.mat  mG1_4.mat  mG1_5.mat  time_vector_measure.mat
data/provision/: patch_clamp_data_deactivation.mat
frontend/: Cargo.toml  metadata.js  plots.js  store.js  utils.js
frontend/components/: DataSelector.astro  Figure.astro  Figure.js  IonChannel.astro
frontend/layouts/: Layout.astro
frontend/pages/: channel-editor.astro  index.astro
frontend/pages/plots/: delta-tolerance.astro  dt-plot.astro  full-simulation-current.astro  simulation-error.astro  voltage-protocol.astro
frontend/src/: lib.rs
frontend/styles/: global.scss
literature/: sources.bib
matlab/: A549 in-silico main.asv  A549 in-silico main.m  CLC_2.m  CRAC1.m  KCa_1_1.m  KCa_3_1.m  Kv_1_3.m  Kv_3_1.m  Kv_3_4.m  Kv_7_1.m  P_CRAC1.m  TASK1.m  TRPV_3.m  load_patch_clamp_data.m  model_evaluation.asv  model_evaluation.m  optimization.m  patch_clamp_data_ramp.mat  simulate_pulse_protocol.m  simulate_pulse_protocol_TRPC.m  simulate_pulse_protocol_TRPV.m
python/in_silico_cancer_cell/: __init__.py  fit.py  in_silico_cancer_cell.pyi  plot.py  utils.py
python/tests/: test_all.py
report/: abstract.tex  content.tex  dgruyter.sty  macros.tex  paper.tex  prettytinytex.tex  report.tex
report/chapters/: methods.tex  results.tex
report/logos/: biotechmed-graz.eps  by.eps
report/poster/: poster.tex
report/presentation/: .gitignore  acronyms.tex  beamerthemetugrazivc.sty  presentation.tex
src/: cell.rs  constants.rs  lib.rs  main.rs  optimisation.rs  patchclampdata.rs  pulseprotocol.rs  utils.rs
src/channels/: base.rs  clc2.rs  crac1.rs  kca11.rs  kca31.rs  kv13.rs  kv31.rs  kv34.rs  kv71.rs  mod.rs  task1.rs  trpc6.rs  trpv3.rs
