[package]
name = "in_silico_cancer_cell"
version = "0.1.0"
edition = "2021"

[lib]
name = "in_silico_cancer_cell"
crate-type = ["lib", "cdylib"]

[features]
pyo3 = ["dep:pyo3", "dep:nalgebra-py"]
pause-each-step = []

[dependencies]
cached = "0.49.2"
log = "0.4.21"
matfile = "0.4.1"
nalgebra = "0.32.4"
regex = "1.10.3"
simplelog = "0.12.2"

pyo3 = { version = "0.16.6", optional = true, features = ["extension-module"] }
nalgebra-py = { version = "0.3.1", optional = true }
argmin = { version = "0.10.0", features = ["wasm-bindgen"] }
argmin-math = { version = "0.4.0", features = ["nalgebra_latest"] }

[workspace]
members = [".", "frontend"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
