[package]
name = "in_silico_cancer_cell"
version = "0.1.0"
edition = "2021"

[lib]
name = "in_silico_cancer_cell"
crate-type = ["lib", "cdylib"]

[features]
default = [
  "dep:matfile",
  "dep:regex",
  "dep:argmin",
  "dep:argmin-math",
  "dep:serde",
  "dep:serde_json",
  "nalgebra/serde-serialize",
]
pyo3 = ["dep:pyo3"]
pause-each-step = []

[dependencies]
nalgebra = "0.32.5"
log = "0.4.21"
simplelog = "0.12.2"

matfile = { version = "0.4.1", optional = true }
regex = { version = "1.10.4", optional = true }
pyo3 = { version = "0.21.2", optional = true, features = ["extension-module"] }
# nalgebra-py = { version = "0.3.1", optional = true }
argmin = { version = "0.10.0", features = ["wasm-bindgen"], optional = true }
argmin-math = { version = "0.4.0", features = ["nalgebra_latest"], optional = true }
serde = { version = "1.0.201", features = ["derive"], optional = true }
serde_json = { version = "1.0.117", optional = true }

[workspace]
members = [".", "frontend"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
