[package]
name = "in_silico_cancer_cell"
version = "0.2.3"
edition = "2024"

[lib]
name = "in_silico_cancer_cell"
crate-type = ["lib", "cdylib"]

[features]
default = [
  "dep:matfile",
  "dep:regex",
  "dep:argmin",
  "dep:argmin-math",
  "dep:serde",
  "dep:serde_json",
  "dep:clap",
  "nalgebra/serde-serialize",
]
pyo3 = ["dep:pyo3"]
pause-each-step = []

[dependencies]
nalgebra = "^0.32.6"
log = "^0.4.28"
simplelog = "^0.12.2"

matfile = { version = "^0.5.0", optional = true }
regex = { version = "^1.11.2", optional = true }
pyo3 = { version = "^0.23.5", optional = true, features = ["extension-module"] }
argmin = { version = "^0.10.0", features = ["rayon", "wasm-bindgen"], optional = true }
argmin-math = { version = "^0.4.0", features = ["nalgebra_latest"], optional = true }
serde = { version = "^1.0.219", features = ["derive"], optional = true }
serde_json = { version = "^1.0.143", optional = true }
clap = { version = "^4.5.47", features = ["derive"], optional = true }
rand = "^0.8.5"
getrandom = { version = "^0.2.16", features = ["js"] }
enum-iterator = "^2.1.0"

[workspace]
members = [".", "frontend"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
