[project]
name = "in_silico_cancer_cell"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.poetry]
name = "in_silico_cancer_cell"
version = "0.1.0"
description = "Electrophysiological model of an A549 cancer cell"
authors = ["MrP01 <peter@waldert.at>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
