[project]
name = "in_silico_cancer_cell"
description = "Simulation of an electrophysiological A549 cancer cell model using individual ion channels across the membrane"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
homepage = "https://in-silico-cancer-cell.waldert.at/"
repository = "https://github.com/MrP01/InSilicoCancerCell"
# documentation = "readthedocs.org"
# changelog = "github.com/me/spam/blob/master/CHANGELOG.md"

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "in_silico_cancer_cell._in_rusty_silico"
features = ["pyo3/extension-module"]

[tool.poetry]
name = "in_silico_cancer_cell"
version = "0.2.3"
description = "Electrophysiological model of an A549 cancer cell"
authors = ["MrP01 <peter@waldert.at>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.10.3"
numpy = "^2.3.2"
clarabel = "^0.11.1"

[tool.poetry.group.dev.dependencies]
ipython = "^9.4.0"
pytest = "^8.4.1"
scipy = "^1.16.1"
invoke = "^2.2.0"

[tool.ruff]
line-length = 120

[tool.nitpick]
style = [
  "github://MrP01/lint-me-now/nitpick-base-style.toml",
  "github://MrP01/lint-me-now/nitpick-rust-style.toml",
  "github://MrP01/lint-me-now/nitpick-python-style.toml",
]
cache = "never"
