[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
name = "in_silico_frontend"
crate-type = ["cdylib"]

[dependencies]
in_silico_cancer_cell = { path = "../" }
wasm-bindgen = "0.2.45"
console_error_panic_hook = "0.1.7"
wee_alloc = { version = "0.4.2", optional = true }
serde = { version = "1.0.198", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[features]
# If you uncomment this line, it will enable `wee_alloc`:
default = ["wee_alloc"]
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.

# The `web-sys` crate allows you to interact with the various browser APIs, like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
wasm-bindgen-futures = "0.3.22"
futures = "0.1.27"
js-sys = "0.3.22"
