[package]
name = "frontend"
version = "0.2.3"
edition = "2024"

[lib]
name = "in_silico_frontend"
crate-type = ["cdylib"]

[dependencies]
in_silico_cancer_cell = { path = "../", default-features = false }
wasm-bindgen = "0.2.101"
console_error_panic_hook = "0.1.7"
wee_alloc = { version = "0.4.5", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[features]
# If you uncomment this line, it will enable `wee_alloc`:
default = ["wee_alloc"]
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.

# The `web-sys` crate allows you to interact with the various browser APIs, like the DOM.
[dependencies.web-sys]
version = "0.3.78"
features = ["console"]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.51"
wasm-bindgen-futures = "0.4.51"
futures = "0.3.31"
js-sys = "0.3.78"
